# mos6502

./: .gitignore  CLAUDE.md  LICENSE  README.rst  noxfile.py  pyproject.toml
.circleci/: config.yml
mos6502/: __init__.py  bitarray_factory.py  compat.py  core.py  errors.py  exceptions.py  flags.py  instructions.py  memory.py  pybitarray.py  registers.py  timing.py  variants.py
mos6502/instructions/: __init__.py  _instructions.py  bit.py  brk.py  instruction.py  jmp.py  jsr.py  nop.py  rti.py  rts.py
mos6502/instructions/_bit/: __init__.py  _bit_6502.py
mos6502/instructions/_brk/: __init__.py  _brk_6502.py  _brk_65c02.py
mos6502/instructions/_nop/: __init__.py  _nop_6502.py
mos6502/instructions/arithmetic/: __init__.py  adc.py  dec.py  dex.py  dey.py  inc.py  inx.py  iny.py  sbc.py
mos6502/instructions/branch/: __init__.py  bcc.py  bcs.py  beq.py  bmi.py  bne.py  bpl.py  bvc.py  bvs.py
mos6502/instructions/compare/: __init__.py  cmp.py  cpx.py  cpy.py
mos6502/instructions/flags/: __init__.py  clc.py  cld.py  cli.py  clv.py  sec.py  sed.py  sei.py
mos6502/instructions/load/: __init__.py  lda.py  ldx.py  ldy.py
mos6502/instructions/logic/: __init__.py  and_.py  eor.py  ora.py
mos6502/instructions/nop/: __init__.py  nop_6502.py
mos6502/instructions/shift/: __init__.py  asl.py  lsr.py  rol.py  ror.py
mos6502/instructions/stack/: __init__.py  pha.py  php.py  pla.py  plp.py
mos6502/instructions/store/: __init__.py  sta.py  stx.py  sty.py
mos6502/instructions/subroutines/: __init__.py
mos6502/instructions/transfer/: __init__.py  tax.py  tay.py  tsx.py  txa.py  txs.py  tya.py
scripts/: __init__.py  build_firmware.py  build_pico.py  create_debug_disk.py  create_test_cart.py  create_test_carts.py  deploy_pico.py  pico_config.py  pico_main.py
systems/: C64_README.md  LICENSE.txt  README.txt  c64.py  c64_benchmark.py  cartridge.py  destest-full.rom
systems/CHECK64_v1.6_20220918_f64/: 2_dead_test_kinzi_006.txt  3_586220ted_kinzi_4.txt  CHECK64_v1.6_20220919.txt
systems/Diag_DeadTest/: dead test.CRT
systems/c64/: CLAUDE.md  __init__.py  __init__.py.bak  benchmark.py  c64.py  cia1.py  cia2.py  colors.py  memory.py  sid.py  vic.py
systems/c64/cartridges/: __init__.py  base.py  error.py  registry.py  rom_builder.py  type_00_normal.py  type_01_action_replay.py  type_02_kcs_power.py  type_03_final_cartridge_iii.py  type_04_simons_basic.py  type_05_ocean.py  type_06_expert.py  type_07_fun_play.py  type_08_super_games.py  type_09_atomic_power.py  type_10_epyx_fastload.py  type_11_westermann.py  type_12_rex_utility.py  type_13_final_cartridge_i.py  type_14_magic_formel.py  type_15_c64gs.py  type_16_warpspeed.py  type_17_dinamic.py  type_18_zaxxon.py  type_19_magic_desk.py  type_20_super_snapshot_v5.py  type_21_comal80.py  type_22_structured_basic.py  type_23_ross.py  type_24_dela_ep64.py  type_25_dela_ep7x8.py  type_26_dela_ep256.py  type_27_rex_ep256.py  type_28_mikro_assembler.py  type_29_final_cartridge_plus.py  type_30_action_replay_4.py  type_31_stardos.py  type_32_easyflash.py  type_33_easyflash_xbank.py  type_34_capture.py  (+51 more)
systems/c64/drive/: __init__.py  d64.py  drive1541.py  gcr.py  iec_bus.py  multiprocess_drive.py  multiprocess_iec_bus.py  threaded_drive.py  threaded_iec_bus.py  via6522.py
systems/c64/mixins/: __init__.py  cartridge.py  debug.py  display.py  drive.py  input_devices.py  keyboard.py  program.py  runner.py
systems/files/: zif-diagnostic-cartridge-bottom.stl  zif-diagnostic-cartridge-top.stl
systems/images/: card_preview_zif-diagnostic-cartridge-bottom.stl  card_preview_zif-diagnostic-cartridge-top.stl  large_display_keychain_mm_by_ks_20200104-62-7jppmq.stl  large_display_nut_job_20200104-57-84dp28.stl  large_display_uchtyt_na_stojaki_trytek.stl  large_preview_zif-diagnostic-cartridge-bottom.stl  large_preview_zif-diagnostic-cartridge-top.stl  large_thumb_zif-diagnostic-cartridge-bottom.stl  large_thumb_zif-diagnostic-cartridge-top.stl  medium_preview_zif-diagnostic-cartridge-bottom.stl  medium_preview_zif-diagnostic-cartridge-top.stl  medium_thumb_zif-diagnostic-cartridge-bottom.stl  medium_thumb_zif-diagnostic-cartridge-top.stl  small_preview_zif-diagnostic-cartridge-bottom.stl  small_preview_zif-diagnostic-cartridge-top.stl  small_thumb_zif-diagnostic-cartridge-bottom.stl  small_thumb_zif-diagnostic-cartridge-top.stl  tiny_preview_zif-diagnostic-cartridge-bottom.stl  tiny_preview_zif-diagnostic-cartridge-top.stl  tiny_thumb_zif-diagnostic-cartridge-bottom.stl  tiny_thumb_zif-diagnostic-cartridge-top.stl  tinycard_preview_zif-diagnostic-cartridge-bottom.stl  tinycard_preview_zif-diagnostic-cartridge-top.stl
tests/: CLAUDE.md  FIXTURE_EXAMPLES.md  __init__.py  conftest.py  test_brk_return_address.py  test_c64_ram_test_sequence.py  test_cpu.py  test_cpu_execute_continuation.py  test_cpu_variants.py  test_double_wrapping_bug.py  test_fetch_word_pc_advancement.py  test_instruction_opcode.py  test_instruction_registration.py  test_mos6502.py  test_mos6502_BRK_instruction.py  test_mos6502_CLC_CLD_CLI_CLV_instruction.py  test_mos6502_JMP_JSR_RTI_RTS_instruction.py  test_mos6502_JMP_JSR_instruction.py  test_mos6502_LDA_LDX_LDY_instructions.py  test_mos6502_NOP_instruction.py  test_mos6502_PHA_PHP_PLA_PLP_instruction.py  test_mos6502_STA_STX_STY_instruction.py  test_mos6502_ram.py  test_nmi.py  test_ram.py  test_timing.py  test_word_wrapping.py
tests/c64/: __init__.py  conftest.py  test_cartridge_types.py  test_cia_timers.py  test_joystick_input.py  test_lightpen_input.py  test_memory_banking.py  test_memory_snapshot.py  test_mouse_input.py  test_paddle_input.py  test_sid.py  test_vic_snapshot.py
tests/c64/drive/: __init__.py  conftest.py  test_cross_track_loading.py  test_d64.py  test_directory_edge_cases.py  test_disk_zone_loading.py  test_drive1541.py  test_file_size_boundaries.py  test_gcr.py  test_iec_bus.py  (+8 more)
tests/fixtures/: README.md  test_cart_16k.crt  test_cart_8k.crt
tests/instructions/: test_bit.py  test_brk.py  test_jmp.py  test_jsr.py  test_nop.py  test_rti.py  test_rts.py  test_subroutine_stack_operations.py
(+447 files in other folders)
