[tool.poetry]
name = "mos6502"
version = "0.1.0"
description = ""
authors = ["Terry Simons <terry.simons@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
bitarray = "^2.6.0"
textual = "^0.1.18"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
nox = "^2022.8.7"
nox-poetry = "^1.0.1"
bump2version = "^1.0.1"
coverage = "^6.4.4"
pycodestyle = "^2.9.1"
pydocstyle = "^6.1.1"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
