[tool.poetry]
name = "mos6502"
version = "0.1.0"
description = ""
authors = ["Terry Simons <terry.simons@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.14,<4.0"
bitarray = "*"


[tool.poetry.group.test.dependencies]
bandit = "*"
coverage = "*"
nox = "*"
nox-poetry = "*"
pytest = "*"
pytest-mock = "*"
ruff = "*"
pyupgrade = "*"

[tool.poetry.group.dev.dependencies]
bump2version = "*"
toml = "*"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "D",
    "E",
    "F",
    "W"
]
extend-select = [
    "W",
    "I",
    "N",
    "UP",
    "YTT",
    "ANN",
    "S",
    "BLE",
    "FBT",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "T10",
    "DJ",
    "EM",
    "EXE",
    "ISC",
    "ICN",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "TID",
    "TCH",
    "ARG",
    "PTH",
    "ERA",
    "PD",
    "PGH",
    "PL",
    "TRY",
    "NPY",
    "RUF",

    "G",
    "S101",
    "N999",
    "TRY003", # Avoid specifying long messages outside the exception class
    "EM102", # Exception must not use an f-string literal, assign to variable first
    "ANN001", # Missing type annotation for function argument
    "ANN201", # Missing return type annotation for public function
    "N802", # Function name `PC` should be lowercase
    "EM101", # Exception must not use a string literal, assign to variable first
    "N803", # Argument name `XX` should be lowercase
    "SLF001", # Private member accessed:
    "ANN206", # Missing return type annotation for classmethod
    "ANN204", # Missing return type annotation for special method
    "TRY301", # Abstract `raise` to an inner function
    "PLR0913", # Too many arguments to function call (7/5)
    "ARG001", # Unused function argument:
    "ARG002", # Unused method argument:
    "PLR0915", # Too many statements

]
ignore = [
    "D203", # one-blank-line-before-class
    "D212", # multi-line-summary-second-line
    "PLR2004", # Magic value used in comparison, consider replacing 2 with a constant variable
    "S101", # Use of `assert` detected
    "G004", # Logging statement uses f-string
    "N999", # Invalid module name:
    "TRY003", # Avoid specifying long messages outside the exception class
    "T201", # print() is intentional - used for emulator output (screen, disassembly, memory dumps)
]
extend-ignore = [
    "ANN001", # Missing type annotation for function argument (437 violations in instruction boilerplate)
    "ARG001", # Unused function argument:
    "PLR0913", # Too many arguments to function call
    "ARG002", # Unused method argument:
    "D100", # Missing docstring in public module
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D106", # Missing docstring in public nested class
    "D107", # Missing docstring in __init__
    "D213", # Multi-line docstring summary should start at the second line
    "D413", # Missing blank line after last section
    "EM102", # Exception must not use an f-string literal, assign to variable first
    "I001", # Import block is un-sorted or un-formatted
    "D417", # D417 Missing argument description in the docstring:
    "PLC0415", # Import should be at top-level (intentional for circular import avoidance)
    "C901", # Function is too complex - Complexity inherent to emulation (I/O, display, CLI, disassembly)
    "PLR0911", # Too many return statements - Acceptable for I/O routing and conversion logic
    "PLR0912", # Too many branches - Acceptable for disassembly and instruction decoding
    "PLR0915", # Too many statements - Acceptable for emulator main loop and initialization
    "E501", # Line too long - Some lines exceed 100 chars for readability (hex dumps, error messages)
    "F401", # Unused import at module level - Byte/Word imported inline to avoid redefinition warnings
    "F811", # Redefinition - Intentional inline imports to avoid circular dependencies
    "RUF003", # EN DASH in comments - Used in address ranges for clarity
    "RET505", # Unnecessary elif/else after return - Preferred for symmetry and clarity in multi-case logic
    "E701", # Multiple statements on one line - Acceptable for simple guard clauses
    "UP045", # Use X | None - Project uses Optional[] for Python <3.10 compatibility
    "ERA001", # Commented code - Kept for debugging and future reference
    "COM812", # Trailing comma - Not required by project style
    "F841", # Unused variable in except - Exception binding used for logging
    "B025", # Duplicate exception in try-except - Intentional for different handling contexts
    "F541", # f-string without placeholders - Consistent string formatting style
    "TRY300", # Move to else block - Current structure preferred for clarity
]

fixable=[
    'ANN001', # Missing type annotation for function argument
    'ANN201', # Missing return type annotation for public function
    'ANN204', # Missing return type annotation for special method
    'ANN206', # Missing return type annotation for classmethod
    'RUF100', # Unused `noqa` directive
    'Q000', # Single quotes found but double quotes preferred
]
unfixable=[
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
